# data-quality-check

./: .Dockerfile.swp  .env  .gitignore  .load-test-docker.sh.swp  Cargo.toml  Dockerfile  LICENSE.txt  README.md  docker-bake.hcl  docker-build-all-binaries.sh  docker-compose-config-producer.yml  docker-compose-load-test.yml  docker-compose.yml  env  env-docker  load-test-docker.sh  load-test.sh
benches/: my_benchmark.rs
config-producer-proto/: Cargo.toml
config-producer-proto/src/: main.rs
data/: .env
data-quality-server/: .env  Cargo.toml
data-quality-server/.data/input/test/: test-fail-json.sh  test-fail.sh  test-succes.sh  test-success-json.sh  test-success-no-pb.sh  test-success-pb.sh
data-quality-server/src/: app_error.rs  handlers.rs  json_validation.rs  main.rs  metrics.rs  protobuf_descriptors.rs
data-quality-settings/: Cargo.toml
data-quality-settings/src/: lib.rs
data/input/proto/: example.proto
data/input/test/: test-success-no-pb-field-check.sh  test-success-pb-field-check.sh
dynamic-message/: Cargo.toml
dynamic-message/benches/: benchmark_validate_whitespace_speed.rs  dynamic_message_population.rs  dynamic_message_serialization.rs  example.json
dynamic-message/src/: lib.rs
dynamic-message/tests/: dynamic_message_tests.rs
load-test/: Cargo.toml
load-test/src/: main.rs
scripts/: speedtest_wget_vs_curl.sh
scripts/load-test/: .env  Dockerfile  data.json  docker-compose.yml  load-test-wget_logs.txt  load-test.sh  message.json  requests-per-second.sh  run-load-test.sh
