[workspace]
resolver = '2'
members = [ 
"data-quality-server",
"data-quality-settings",
"config-producer-proto"
]

[workspace.package]
name = "data-quality-check"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = {version = "0.7.9", features = ["multipart"]}
base64 = "0.22.1"
clap = "4.5.23"
color-eyre = "0.6.3"
dotenvy = "0.15.7"
notify = "7.0.0"
prost = "0.13.4"
prost-build = "0.13.4" 
prost-reflect = { version = "0.14.3", features = ["serde"] }
prost-types = "0.13.4"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"

tracing = { version = "0.1.41", features = ["attributes"]}
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

data-quality-server = { path = "./data-quality-server", version = "0.1.0" }
data-quality-settings = { path = "./data-quality-settings", version = "0.1.0"}
config-producer-proto = { path = ".config-producer-proto", version = "0.1.0"}

[profile.release]
incremental = true
opt-level = 3
strip = true