[workspace]
resolver = '2'
members = [
"config-producer-proto",
"data-quality-server",
"data-quality-settings",
"dynamic-message",
"load-test"]

[workspace.package]
name = "data-quality-check"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies]
anyhow = "1.0.95"
axum = {version = "0.8.1", features = ["macros","multipart"]}
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
color-eyre = "0.6.3"
criterion = "0.5.1"
env_logger = "0.11.6"
futures = "0.3.31"
dotenvy = "0.15.7"
log = "0.4.26"
notify = "8.0.0"
opentelemetry = { version = "0.27.1", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-stdout = "0.27.0"
prost = "0.13.4"
prost-build = "0.13.4" 
prost-reflect = { version = "0.14.3", features = ["serde"] }
prost-types = "0.13.4"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tracing = { version = "0.1.41", features = ["attributes"]}
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
walkdir = "2.5.0"

config-producer-proto = { path = ".config-producer-proto", version = "0.1.0"}
data-quality-server = { path = "./data-quality-server", version = "0.1.0" }
data-quality-settings = { path = "./data-quality-settings", version = "0.1.0"}
dynamic-message = { path = "./dynamic-message", version = "0.1.0"}

[dev.dependencies]
criterion = "0.5.1"
iai = "0.1.1"

[profile.release]
incremental = true
opt-level = 3
strip = true
