[package]
name = "data-quality-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-stdout = { workspace = true }
prost = { workspace = true }
prost-reflect = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

data-quality-settings = { workspace = true }
dynamic-message = { workspace = true }